--- a/src/components/CalculatorDisplay.scss
+++ b/src/components/CalculatorDisplay.scss
@@ -1,8 +1,7 @@
-@import "@/styles/core/_all.scss";
-
 .calculator-display {
-	padding: 48px 36px;
+	padding: 12px 36px 48px;
 	text-align: right;
 	font-size: 5.6rem;
 	font-weight: 600;
+	letter-spacing: 2px;
 }
