--- a/src/components/CalculatorKeyPad.scss
+++ b/src/components/CalculatorKeyPad.scss
@@ -2,12 +2,20 @@
 
 $keypad-gap: 6px;
 $keypad-bg-light: #f9f9f9;
+$keypad-bg-dark: #292d36;
 
 .calculator-keypad {
 	width: 100%;
 	padding: 32px 24px;
 	border-radius: 48px 48px 0 0;
-	background-color: $keypad-bg-light;
+
+	.light & {
+		background-color: $keypad-bg-light;
+	}
+
+	.dark & {
+		background-color: $keypad-bg-dark;
+	}
 
 	.keypad {
 		margin: 0 auto;
