Light/dark mode

--- a/src/components/CalculatorKeyPad.scss
+++ b/src/components/CalculatorKeyPad.scss
@@ -8,6 +8,7 @@ $keypad-bg-dark: #292d36;
 	width: 100%;
 	padding: 32px 24px;
 	border-radius: 48px 48px 0 0;
+	transition: background-color .2s;
 
 	.light & {
 		background-color: $keypad-bg-light;
